<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiFlow</string>
    <string name="main_label">WiFlow</string>
    <string name="settings_label">Settings</string>
	<string name="home_label">Home</string>
	<string name="supported_label">Supported services</string>
	<string name="fon_label">Fon WIFI</string>
	<string name="netia_label">Netia WIFI</string>
	<string name="wifipt_label">PT-WIFI</string>
	<string name="boingo_label">Boingo</string>
	<string name="vodafone_label">Vodafone WIFI</string>
	<string name="user_label">User</string>
	<string name="password_label">Password</string>
	<string name="user_hint">Your username</string>
	<string name="password_hint">Your password</string>
	<string name="back_label">Back</string>
	<string name="start_service_label">Start</string>
	<string name="stop_service_label">Stop</string>
	<string name="service_label">Manage service</string>
	<string name="force_connect_label">Enable Force connect</string>
	<string name="force_connect_detail_label">Force connect on the supported services</string>
	<string name="notification_label">Enable Notifications</string>
	<string name="notification_detail_label">Receive notifications when you connect</string>
	<string name="vibrate_label">Vibrate</string>
	<string name="vibrate_detail_label">Vibrate when you connect</string>
	<string name="ringtone_label">Ring tone</string>
	<string name="ringtone_detail_label">Sounds when you connect</string>
	<string name="changed_network_title_label">Router switch</string>
	<string name="changed_network_label">Changed network router</string>
	<string name="tutorial_label_0">The status panel</string>
	<string name="status_tutorial_fon_label">Connected to FON</string>
	<string name="explanation_label_0">This is the status panel, it is where your current connection is displayed. It is clickable in case you wish to refresh it. \n\nThe text colors red and green are used to distinguish between non-supported networks from the supported ones.</string>
	<string name="tutorial_label_1">The network configuration</string>
	<string name="tutorial_label_2">The service</string>
	<string name="tutorial_label_3">The header icons</string>
	<string name="explanation_label_1">This is an example of the network configuration panel. \n\nBy clicking it a network credentials dialog will appear. \n\nThe arrow on the right changes its color to green if the phone has the credentials stored.</string>
	<string name="explanation_label_2">This is the service control panel. \n\nThis is where you can control if the app is controlling your connections in the background or not.</string>
	<string name="explanation_label_3">This is the preferences button. You can change how your app will behave in case of new notifications or if you wish to force to a supported service connection.</string>
	<string name="header_desc">Header</string>
    <string name="toggle_turn_off">Service Off</string>
    <string name="toggle_turn_on">Service On</string>
    <string name="explanation_label_4">This is the wifi button. With it you can turn on and off your antenna. \n\nPlease note that it may take a few seconds to turn wifi on.</string>
    <string name="twitter_label">Twitter:</string>
    <string name="email_label">E-mail:</string>
    <string name="about_label">Do you have a new service suggestion? A tip? Let us know on: </string>
    <string name="twitter_label_text">\@wiflowwiflow</string>
    <string name="email_label_text">wiflow.mobile@gmail.com</string>
    <string name="refresh_desc">Refresh Image</string>
    <string name="toast_wifiOn">"Turning wi-fi on, this might take a few seconds"</string>
    <string name="toast_shutService">"Shutting down the service, this might take a few seconds"</string>
    <string name="toast_ServiceOn">"Turning on the service... Now monitoring supported WiFi hotspots"</string>
    <string name="wifi_label">WiFi</string>
    <string name="serviceon_label">Service</string>
    <string name="on_label"></string>
    <string name="off_label"></string>
    <string name="telenet_label">Telenet HomeSpot</string>
    <string name="belgacom_label">Fon Belgacom</string>
     
    
</resources>