<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_body"
	android:orientation="horizontal">

    <TextView
        	android:id="@+id/about_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_margin="5dp"
	        android:text="@string/about_label"
	        android:textColor="@color/main_green_dark"
	        android:textSize="20sp"
	        android:textStyle="bold" />
    
    <View
		android:id="@+id/about_separator"
		android:layout_height="2dip"
		android:layout_width="fill_parent"
		android:layout_below="@id/about_textview"
		android:layout_margin="5dp"
		android:background="@color/main_separator" />

    <TextView
        	android:id="@+id/twitter_label_textview"
        	android:layout_below="@id/about_separator"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/twitter_label"
	        android:textColor="@color/main_green_dark"
	        android:textSize="18sp"
	        android:layout_marginLeft="5dp"
	        android:textStyle="bold" />
    
    <TextView
        	android:id="@+id/twitter_textview"
        	android:layout_below="@id/about_separator"
        	android:layout_toRightOf="@id/twitter_label_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/twitter_label_text"
	        android:textColor="@color/about_text_color"
	        android:textSize="17sp"
	        android:layout_marginRight="5dp"
	        android:textStyle="bold" />
    
    <TextView
        	android:id="@+id/email_label_textview"
        	android:layout_below="@id/twitter_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/email_label"
	        android:textColor="@color/main_green_dark"
	        android:textSize="18sp"
	        android:layout_marginLeft="5dp"
	        android:textStyle="bold" />
    <TextView
        	android:id="@+id/email_textview"
        	android:layout_below="@id/twitter_textview"
        	android:layout_toRightOf="@id/email_label_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/email_label_text"
	        android:textColor="@color/about_text_color"
	        android:textSize="17sp"
	        android:layout_marginRight="5dp"
	        android:textStyle="bold" />
    <TableLayout
        		android:layout_below="@id/email_textview"
				android:layout_width="fill_parent"
				android:layout_marginTop="10dip"
				android:layout_height="wrap_content"
				android:stretchColumns="0">
				<TableRow>		
					<Button
				        android:id="@+id/back_button"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center"
				        android:text="@string/back_label" />	
				</TableRow>
	</TableLayout>
</RelativeLayout>	
