<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_body"
	android:orientation="horizontal">

    <TextView
        	android:id="@+id/user_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/user_label"
	        android:textColor="@color/main_green_dark"
	        android:textSize="20sp"
	        android:layout_marginRight="5dp"
	        android:layout_marginLeft="5dp"
	        android:textStyle="bold" />
    
    <EditText
        	android:id="@+id/user_edit"
        	android:layout_below="@id/user_textview"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:hint="@string/user_hint"
	        android:textColor="@color/main_grey"
	        android:layout_marginRight="3dp"
	        android:layout_marginLeft="3dp"
	        android:textSize="20sp" />
    
    <TextView
        	android:id="@+id/password_textview"
        	android:layout_below="@id/user_edit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/password_label"
	        android:textColor="@color/main_green_dark"
	        android:textSize="20sp"
	        android:layout_marginRight="5dp"
	        android:layout_marginLeft="5dp"
	        android:textStyle="bold" />
    
    <EditText
        	android:id="@+id/password_edit"
        	android:layout_below="@id/password_textview"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:gravity="left"
	        android:hint="@string/password_hint"
	        android:textColor="@color/main_grey"
	        android:layout_marginRight="3dp"
	        android:layout_marginLeft="3dp"
	        android:textSize="20sp" />
    
    
    

    <TableLayout
        		android:layout_below="@id/password_edit"
				android:layout_width="fill_parent"
				android:layout_marginTop="10dp"
				android:layout_height="wrap_content"
				android:stretchColumns="0,1">
				<TableRow>		
					<Button
				        android:id="@+id/back_button"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center"
				        android:text="@string/back_label" />	
					<Button
				        android:id="@+id/ok_button"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center"
				        android:text="@android:string/ok" />
				</TableRow>
	</TableLayout>
</RelativeLayout>	
