<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey_bggrad_light"
    android:orientation="vertical" >
    
    <ScrollView
        android:id="@+id/scroll_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
		<LinearLayout
		    android:id="@+id/mainlinear"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
            
	        <RelativeLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	
	            <RelativeLayout
	                android:id="@+id/rlmain_header"
	                android:layout_width="fill_parent"
	                android:layout_height="45dp"
	                android:layout_alignParentLeft="true"
	                android:layout_alignParentTop="true"
	                android:orientation="horizontal" 
	                android:background="@layout/container_top">
<!-- 	                android:background="@layout/header_gradient" -->

	                <TextView
	                    android:id="@+id/main_header"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_alignParentLeft="true"
	                    android:layout_centerVertical="true"
	                    android:layout_marginLeft="40dp"
	                    android:gravity="right"
	                    android:text="@string/main_label"
	                    android:textColor="@color/main_title_txt"
	                    android:shadowColor="@color/main_txt_shadow"
	                    android:shadowDx="1"
	                    android:shadowDy="1"
	                    android:shadowRadius="1"
	                    android:textSize="25sp"
	                    android:textStyle="bold" />

	                <Button
	                    android:id="@+id/settings_button"
	                    android:layout_width="wrap_content"
	                    android:layout_height="fill_parent"
	                    android:layout_alignParentRight="true"
	                    android:layout_centerVertical="true"
	                    android:gravity="center"
	                    android:background="@drawable/ic_settings" />
	                
	                <View
	                    android:id="@+id/settings_separator"
						android:layout_height="fill_parent"
						android:layout_width="1dip"
						android:layout_toLeftOf="@id/settings_button"
						android:background="@color/dark_grey" />
		                <Button
		                    android:id="@+id/filter_button"
		                    android:layout_width="wrap_content"
		                    android:layout_height="fill_parent"
		                    android:layout_centerVertical="true"
		                    android:layout_toLeftOf="@id/settings_separator"
		                    android:gravity="center"
		                    android:background="@drawable/ic_filter" />
		                <View
						android:layout_height="fill_parent"
						android:layout_width="1dip"
						android:layout_toLeftOf="@id/filter_button"
						android:background="@color/dark_grey" />
	            </RelativeLayout>
	            
	            
	            <LinearLayout
                android:id="@+id/adslayout"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/rlmain_header"
	            android:orientation="vertical" >
	        </LinearLayout>

	            <RelativeLayout
	                android:id="@+id/rlmain_body"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_below="@id/adslayout"
	                android:layout_centerHorizontal="true"
	                android:layout_marginTop="6dp"
	                android:layout_marginLeft="3dp"
	                android:layout_marginRight="3dp"
	                android:layout_marginBottom="3dp"
	                android:gravity="center" >

	                <FrameLayout
	                    android:id="@+id/llmain_body_status"
	                    android:layout_width="fill_parent"
	                    android:layout_height="70dp"
	                    android:background="@color/grey_bggrad_light"
	                    android:layout_centerHorizontal="true"
	                    android:gravity="center" >
					 <TextView
	                        android:id="@+id/status_textview"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_margin="10dp"
	                        android:textSize="20sp"
	                        android:textStyle="bold"
	                        android:textColor="#ffffff"
	                        android:layout_gravity="center"
	                        android:gravity="center" />
	                </FrameLayout>         
	            </RelativeLayout>
	            
	            <View
	                 android:id="@+id/menuSep"
			        android:layout_above="@id/rlmain_body"
			        android:layout_width="fill_parent"
			        android:layout_height="5dip"
			        android:background="@drawable/drop_shadow">
			    </View>
	            
	            <TableLayout
				    android:layout_below="@id/rlmain_body"
					android:id="@+id/rltogglers"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_alignParentLeft="true"
	                android:layout_margin="3dp"
	                android:gravity="center"
					android:stretchColumns="0,1">
					<TableRow>
						<RelativeLayout 
			                android:id="@+id/rlwifi_button"
			                android:layout_width="fill_parent"
			                android:layout_height="wrap_content"
			                android:layout_marginRight="3dp"
			                android:gravity="center">
			                
						    <TextView
			                android:id="@+id/wifi_header"
			                android:layout_width="wrap_content"
			                android:layout_margin="3dp"
			                android:layout_height="wrap_content"
			                android:gravity="left"
			                android:text="@string/wifi_label"
			                android:textColor="@color/main_title_txt"
			                android:shadowColor="@color/main_txt_shadow"
			                android:shadowDx="1"
			                android:shadowDy="1"
			                android:shadowRadius="1"
			                android:textSize="20sp"
			                android:layout_centerVertical="true"
			                android:textStyle="bold" />
       					</RelativeLayout>

			            <RelativeLayout 
				        	android:id="@+id/rlservice_button"
				            android:layout_width="fill_parent"
				            android:layout_height="wrap_content"
				            android:layout_marginLeft="3dp"
				            android:gravity="center" >
				                
				            <TextView
					        	android:id="@+id/service_header"
					            android:layout_width="wrap_content"
					            android:layout_margin="3dp"
					            android:layout_height="wrap_content"
					            android:gravity="right"
					            android:text="@string/serviceon_label"
					            android:textColor="@color/main_title_txt"
				                android:shadowColor="@color/main_txt_shadow"
					            android:shadowDx="1"
					            android:shadowDy="1"
					            android:shadowRadius="1"
					            android:textSize="20sp"
					            android:layout_centerVertical="true"
					            android:textStyle="bold" /> 
			            </RelativeLayout>
					</TableRow>
				</TableLayout>
	        </RelativeLayout>

	        <View
			        android:layout_width="fill_parent"
			        android:layout_height="5dip"
			        android:layout_marginTop="5dp"
			        android:background="@drawable/drop_shadow2">
			</View>
	        
	        <RelativeLayout
	                android:id="@+id/rl_supported"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal" 
	                android:background="@layout/container_top">
	                <TextView
	                android:id="@+id/supported_header"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:text="@string/supported_label"
	                android:textColor="@color/main_title_txt"
	                android:shadowColor="@color/main_txt_shadow"
	                android:shadowDx="1"
	                android:shadowDy="1"
	                android:shadowRadius="1"
	                android:textSize="20sp"
	                android:textStyle="bold" 
	                android:paddingBottom="3dp"/>
	                </RelativeLayout>
	        
	            

	         <View
			        android:layout_width="fill_parent"
			        android:layout_height="5dip"
			        android:background="@drawable/drop_shadow">
			</View>
	        
	        	
		    <RelativeLayout
		        android:id="@+id/rlmain_body_network1"
		        android:layout_width="fill_parent"
		        android:layout_height="50dp"
		        android:background="@drawable/ic_panel"
		        android:gravity="center" 
		        android:layout_margin="3dp">    
		
		        <ImageView
		            android:id="@+id/configure1_button"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"
		            android:layout_marginRight="19dp"
		            android:background="@drawable/next"
		            android:gravity="center" />
		
		        <TextView
		            android:id="@+id/fon_textview"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_centerVertical="true"
		            android:layout_marginLeft="20dp"
		            android:text="@string/fon_label"
		            android:textColor="@color/main_title_txt"
		            android:shadowColor="@color/main_txt_shadow"
	                android:shadowDx="1"
	                android:shadowDy="1"
	                android:shadowRadius="1"
		            android:textSize="20sp"
		            android:textStyle="bold" />
		    </RelativeLayout>

		    <RelativeLayout
		        android:id="@+id/rlmain_body_network3"
		        android:layout_width="fill_parent"
		        android:layout_height="50dp"
		        android:layout_margin="3dp"
		        android:background="@drawable/ic_panel"
		        android:gravity="center" >
		
		        <Button
		            android:id="@+id/configure3_button"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"
		            android:layout_marginRight="19dp"
		            android:background="@drawable/next"
		            android:gravity="center" />
		
		        <TextView
		            android:id="@+id/telenet_textview"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_centerVertical="true"
		            android:layout_marginLeft="20dp"
		            android:text="@string/telenet_label"
	                android:textColor="@color/main_title_txt"
		            android:shadowColor="@color/main_txt_shadow"
	                android:shadowDx="1"
	                android:shadowDy="1"
	                android:shadowRadius="1"
		            android:textSize="20sp"
		            android:textStyle="bold" />
		    </RelativeLayout>
		    
		    <RelativeLayout
		        android:id="@+id/rlmain_body_network2"
		        android:layout_width="fill_parent"
		        android:layout_height="50dp"
		        android:layout_margin="3dp"
		        android:background="@drawable/ic_panel"
		        android:gravity="center" >
		
		        <ImageView
		            android:id="@+id/configure2_button"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"
		            android:layout_marginRight="19dp"
		            android:background="@drawable/next"
		            android:gravity="center" />
		
		        <TextView
		            android:id="@+id/wifipt_textview"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_centerVertical="true"
		            android:layout_marginLeft="20dp"
		            android:text="@string/wifipt_label"
	                android:textColor="@color/main_title_txt"
		            android:shadowColor="@color/main_txt_shadow"
	                android:shadowDx="1"
	                android:shadowDy="1"
	                android:shadowRadius="1"
		            android:textSize="20sp"
		            android:textStyle="bold" />
		    </RelativeLayout>
		    
<!-- 		     <RelativeLayout -->
<!-- 		        android:id="@+id/rlmain_body_network3" -->
<!-- 		        android:layout_width="fill_parent" -->
<!-- 		        android:layout_height="50dp" -->
<!-- 		        android:layout_margin="3dp" -->
<!-- 		        android:background="@drawable/ic_panel" -->
<!-- 		        android:gravity="center" > -->
		
<!-- 		        <Button -->
<!-- 		            android:id="@+id/configure3_button" -->
<!-- 		            android:layout_width="wrap_content" -->
<!-- 		            android:layout_height="wrap_content" -->
<!-- 		            android:layout_alignParentRight="true" -->
<!-- 		            android:layout_centerVertical="true" -->
<!-- 		            android:layout_marginRight="19dp" -->
<!-- 		            android:background="@drawable/next" -->
<!-- 		            android:gravity="center" /> -->
		
<!-- 		        <TextView -->
<!-- 		            android:id="@+id/boingo_textview" -->
<!-- 		            android:layout_width="wrap_content" -->
<!-- 		            android:layout_height="wrap_content" -->
<!-- 		            android:layout_alignParentLeft="true" -->
<!-- 		            android:layout_centerVertical="true" -->
<!-- 		            android:layout_marginLeft="20dp" -->
<!-- 		            android:text="@string/boingo_label" -->
<!-- 		            android:textColor="@color/main_green_dark" -->
<!-- 		            android:shadowColor="@color/main_txt_shadow" -->
<!-- 	                android:shadowDx="1" -->
<!-- 	                android:shadowDy="1" -->
<!-- 	                android:shadowRadius="1" -->
<!-- 		            android:textSize="20sp" -->
<!-- 		            android:textStyle="bold" /> -->
<!-- 		    </RelativeLayout> -->
		    
<!-- 		    <TextView -->
<!-- 		        android:id="@+id/service_textview" -->
<!-- 		        android:layout_width="wrap_content" -->
<!-- 		        android:layout_height="wrap_content" -->
<!-- 		        android:layout_marginLeft="5dp" -->
<!-- 		        android:text="@string/service_label" -->
<!-- 		        android:textColor="@color/main_separator_title" -->
<!-- 		        android:textSize="20sp" -->
<!-- 		        android:textStyle="bold" /> -->
	    </LinearLayout>
    </ScrollView>
</RelativeLayout>